--- a/src/styles/boilerplate.scss
+++ b/src/styles/boilerplate.scss
@@ -31,6 +31,9 @@ a:visited {
 body {
   margin: 0;
   padding: 0;
+
   font-family: Roboto, sans-serif;
   line-height: 1.125rem;
+
+  background: #f2f2f2;
 }
