[refactor]: delete material UI

--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -1,13 +1,9 @@
 .wrapper {
-  justify-content: center;
-
   width: 400px;
   margin: 160px auto;
   padding: 40px;
-
-  text-align: center;
 }
 
 .textField {
-  box-sizing: border-box;
+  margin: 12px 0;
 }
