--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,11 +1,61 @@
-.tolBar {
+.header {
+  position: relative;
+  z-index: 5;
+
+  height: 70px;
+  padding: 5px;
+
+  background: var(--color-gray-100);
+}
+
+.wrapper {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
-  background: rgb(225, 225, 225);
+
+  width: 100%;
+  max-width: 1340px;
+  margin: 0 auto;
 }
 
 .logo {
-  cursor: pointer;
-  width: 150px;
+  width: 240px;
+  height: 60px;
+  padding-left: 15px;
+}
+
+.button {
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+.avatar {
+  margin-right: 38px;
+}
+
+.storybook {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nameAndAvatar {
+  display: flex;
+  align-items: center;
+}
+
+.name {
+  margin-right: 10px;
+  color: var(--color-light-500);
+  border-bottom: 1px dashed var(--color-light-500);
+}
+
+.link {
+  text-decoration: none;
+}
+
+.liner {
+  position: absolute;
+  top: -10px;
+  left: -5px;
 }
