--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -4,6 +4,14 @@
   padding: 40px;
 }
 
+.title {
+  text-align: center;
+}
+
 .textField {
   margin: 12px 0;
+}
+
+.button {
+  margin-top: 20px;
 }
