--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -14,44 +14,14 @@
   justify-content: space-between;
 
   width: 100%;
-  max-width: 1340px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
 .logo {
+  cursor: pointer;
   width: 240px;
   height: 60px;
-  padding-left: 15px;
-}
-
-.button {
-  margin-right: 16px;
-  text-decoration: none;
-}
-
-.avatar {
-  margin-right: 38px;
-}
-
-.storybook {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.nameAndAvatar {
-  display: flex;
-  align-items: center;
-}
-
-.name {
-  margin-right: 10px;
-  color: var(--color-light-500);
-  border-bottom: 1px dashed var(--color-light-500);
-}
-
-.link {
-  text-decoration: none;
 }
 
 .liner {
