--- a/src/components/liner/liner.module.scss
+++ b/src/components/liner/liner.module.scss
@@ -7,7 +7,7 @@
   width: 0;
   height: 4.8px;
 
-  background: var(--color-green-500);
+  background: var(--color-accent-500);
   box-shadow: 0 0 10px rgb(255 255 255 / 50%);
 
   animation: animFw 8s linear infinite;
