[feat]: added features for added item in table

--- a/src/pages/main-page/main-page.module.scss
+++ b/src/pages/main-page/main-page.module.scss
@@ -1,17 +1,11 @@
-.wrapper {
-  width: 400px;
-  margin: 160px auto;
-  padding: 40px;
+.inputCell {
+  max-width: 150px;
 }
 
-.title {
-  text-align: center;
+.inputCellL {
+  max-width: 150px;
 }
 
-.textField {
-  margin: 12px 0;
-}
-
-.button {
-  margin-top: 20px;
+.tableCompany {
+  margin-top: 80px;
 }
