--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -52,7 +52,8 @@
   border: 1px solid var(--primary-500, #8c61ff);
 
   &:hover {
-    background: var(--color-dark-500);
+    color: var(--color-gray-50);
+    background: var(--color-accent-200);
   }
 
   &:active {
