--- a/src/components/tableCompany/tableCompany.module.scss
+++ b/src/components/tableCompany/tableCompany.module.scss
@@ -16,3 +16,21 @@
   cursor: pointer;
   margin: 0 5px;
 }
+
+.green {
+  color: var(--color-green-600);
+}
+
+.red {
+  color: var(--color-error-600);
+}
+
+.iconButton {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+
+.textField {
+  width: 100%;
+}
